# ProsperChallenge

./: .gitignore  analyze_logs.py  app.py  bot.py  notes.md  questions.json  readme.md  server.py  system_prompt.txt  talk_to_agent.sh  utils.py
daily_scripts/: create_dialin_config.sh  delete_room.sh  get_rooms.sh
data/: PIPECAT_API_KEY  system_prompt.txt
deployment/: bot_deployment.py  how_to_deploy.md  pcc-deploy.toml  pyproject.toml
old/: bot.py  talk_to_agent.sh  utils.py
old/daily_scripts/: buy_phone_number.sh  delete_dialin_config.sh  get_dialin_configs.sh  get_logs.sh  get_phone_numbers.sh  release_phone_number.sh
old/deployment/: Dockerfile  pcc-deploy.toml
